# Product-Summ-Form

./: CMakeLists.txt
include/: def.h  lex_analizer.h  ps_form.h  ps_form_operators.h
src/: lex_analizer.c  main.c  ps_form.c  ps_form_operators.c
tests/: 11.dat.ans  12.dat.ans  13.dat.ans  16.dat.ans  18.dat.ans  19.dat.ans  22.dat.ans  23.dat.ans  24.dat.ans  25.dat.ans  26.dat.ans  27.dat.ans  28.dat.ans  29.dat.ans  7.dat.ans  test.py
